# linalg

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  main.cpp  run.sh
src/: CMakeLists.txt  matrix.cpp  matrix.h  pprint.cpp  pprint.h
tests/: CMakeLists.txt
